<resources>
    <string name="app_name">Flibusta</string>
    <string name="search">Search</string>
    <string name="start">Start</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="title">Title</string>
    <string name="author_name">Author Name</string>
    <string name="author_surname">Author Surname</string>
    <string name="authors">Authors:</string>~
    <string name="genres">Genres:</string>
    <string name="translators">Translators:</string>
    <string name="series">Series:</string>
    <string name="rating">Rating:</string>
    <string name="file_size">File size:</string>
</resources>