<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_book_detailed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/search_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/searchImageView"
                android:layout_width="328dp"
                android:layout_height="79dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/book_logo" />


            <TextView
                android:id="@+id/bookDetailedTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/bookman_old_style_bold"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchImageView" />

            <TextView
                android:id="@+id/authorsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bookman_old_style"
                android:text="@string/authors"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedTitle" />

            <TextView
                android:id="@+id/bookDetailedAuthors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/bookman_old_style_bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedTitle" />

            <TextView
                android:id="@+id/genresTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bookman_old_style"
                android:text="@string/genres"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedAuthors" />

            <TextView
                android:id="@+id/bookDetailedGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/bookman_old_style_bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedAuthors" />

            <TextView
                android:id="@+id/translatorsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bookman_old_style"
                android:text="@string/translators"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedGenres" />

            <TextView
                android:id="@+id/bookDetailedTranslators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="145dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/bookman_old_style_bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedGenres" />

            <TextView
                android:id="@+id/seriesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bookman_old_style"
                android:text="@string/series"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedTranslators" />

            <TextView
                android:id="@+id/bookDetailedSeries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/bookman_old_style_bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedTranslators" />

            <TextView
                android:id="@+id/ratingsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bookman_old_style"
                android:text="@string/rating"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedSeries" />

            <TextView
                android:id="@+id/bookDetailedRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/bookman_old_style_bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedSeries" />

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bookman_old_style"
                android:text="@string/file_size"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedRating" />

            <TextView
                android:id="@+id/bookDetailedSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/bookman_old_style_bold"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedRating" />

            <Button
                android:id="@+id/bookEpubButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="EPUB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookReadButton" />

            <Button
                android:id="@+id/bookReadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="Read"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookDetailedSize" />

            <Button
                android:id="@+id/bookMobiButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="MOBI"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bookEpubButton"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toEndOf="@+id/bookFb2Button"
                app:layout_constraintTop_toBottomOf="@+id/bookReadButton" />

            <Button
                android:id="@+id/bookFb2Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="FB2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookReadButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>